4.5.99.1 (Xfce 4.6rc1)
======================
- Check if the randr extension is available (bug #4836).

4.5.93 (Xfce 4.6 beta3)
=======================
- Allow the settings manager window to be minimized (bug #4596).
- Fix xfce4-settings-helper not setting workspace count.
- Improve the UI of the shortcut command dialog and 
  xfce4-settings-editor a bit.
- Fix label wrapping in the settings manager icon view (bug #4743).
- Make workspaces helper multi-screen aware.
- Set SmRestartIfRunning if started in debug mode.
- Add XfceTextRenderer for prelit/follow-state and keyboard navigation
  support in the settings manager dialog.
- Add --dialog=<dialog name> command line parameter to 
  xfce4-settings-manager so that one can make it show any of its 
  children at startup.
- Review strings.
- Fully update the appearance dialog when the settings are changed in
  another dialog or with xfconf-query.
- Set a DPI size based on a calculation when a custom DPI is disabled,
  this instead of the hard-coded 96 DPI.
- Translation updates: Basque, Brazilian Portuguese, Catalan, Czech, 
  Finnish, French, German, Greek, Hungarian, Indonesian, Japanese, 
  Norwegian Bokmal, Spanish, Swedish, Turkish, Ukrainian.

4.5.92 (Xfce 4.6 beta2)
=======================
- Add an option to disable keyboard settings.
- Default to "Rodent" icon theme instead of "hicolor" (Bug 4545).
- Use XfcePosixSignalHandler in xfce4-settings-helper to handle
  signals, since calling gtk_main_quit() from a signal handler may
  not be safe.
- Make xfce4-settings-helper connect to the session manager and use
  the SmRestartImmediately facility to make sure it keeps running.
  Disable the autostart .desktop file if we were restored from a
  saved session.  Attempt to acquire an X selection on startup to
  ensure multiple copies of the helper aren't running (bug 4577).

4.5.91 (Xfce 4.6 beta1)
=======================
- Add workspace name handling to xfce4-settings-helper.