@@ -11,10 +11,11 @@ dnl *** Version information ***
 dnl ***************************
 m4_define([xfce4_settings_version_major], [4])
 m4_define([xfce4_settings_version_minor], [5])
-m4_define([xfce4_settings_version_micro], [93])
+m4_define([xfce4_settings_version_micro], [99])
+m4_define([xfce4_settings_version_nano], [1])
 m4_define([xfce4_settings_version_build], [r@REVISION@])
-m4_define([xfce4_settings_version_tag], [svn]) # Leave empty for releases
-m4_define([xfce4_settings_version], [xfce4_settings_version_major().xfce4_settings_version_minor().xfce4_settings_version_micro()ifelse(xfce4_settings_version_tag(),[],[], [-ifelse(xfce4_settings_version_tag(), [stephan], [xfce4_settings_version_tag()-xfce4_settings_version_build()], [xfce4_settings_version_tag()])])])
+m4_define([xfce4_settings_version_tag], []) # Leave empty for releases
+m4_define([xfce4_settings_version], [xfce4_settings_version_major().xfce4_settings_version_minor().xfce4_settings_version_micro()ifelse(xfce4_settings_version_nano(), [], [], [.xfce4_settings_version_nano()])ifelse(xfce4_settings_version_tag(),[],[], [-ifelse(xfce4_settings_version_tag(), [stephan], [xfce4_settings_version_tag()-xfce4_settings_version_build()], [xfce4_settings_version_tag()])])])
 
 dnl *******************************************
 dnl *** Debugging support for SVN snapshots ***
@@ -75,11 +76,11 @@ XDT_CHECK_PACKAGE([EXO], [exo-0.3], [0.3.92])
 XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.10.0])
 XDT_CHECK_PACKAGE([GLIB], [glib-2.0], [2.12.0])
 XDT_CHECK_PACKAGE([GTHREAD], [gthread-2.0], [2.12.0])
-XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0], [4.5.93])
-XDT_CHECK_PACKAGE([LIBXFCEGUI4], [libxfcegui4-1.0], [4.5.93])
-XDT_CHECK_PACKAGE([LIBXFCE4KBD_PRIVATE], [libxfce4kbd-private-1.0], [4.5.93])
+XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0], [4.5.99.1])
+XDT_CHECK_PACKAGE([LIBXFCEGUI4], [libxfcegui4-1.0], [4.5.99.1])
+XDT_CHECK_PACKAGE([LIBXFCE4KBD_PRIVATE], [libxfce4kbd-private-1.0], [4.5.99.1])
 XDT_CHECK_PACKAGE([GLADE], [libglade-2.0], [2.0.0])
-XDT_CHECK_PACKAGE([XFCONF], [libxfconf-0], [4.5.93])
+XDT_CHECK_PACKAGE([XFCONF], [libxfconf-0], [4.5.99.1])
 XDT_CHECK_PACKAGE([DBUS_GLIB], [dbus-glib-1], [0.34])
 XDT_CHECK_PACKAGE([XI], [xi], [1.0.0])
 XDT_CHECK_PACKAGE([LIBX11], [x11], [1.0.0])
