@@ -2,6 +2,10 @@
 
 	* cs.po: Czech translation updated
 
+2009-01-26	Jannis Pohlmann <jannis@xfce.org>
+
+	* fi.po: Update translation file for the release.
+
 2009-01-25  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
 	* fi.po: Update Finnish translation.
